js/js.translator/testData/incremental/invalidation/companionWithStdLibCall/main/f.3.kt
fun test(x: Int): Int {
    val y = MyClass1.companionMethod(x)
    return y
}

